# profile.mobile.apps.native.libug-worldclock-efl

./: .cproject  .project  CMakeLists.txt  LICENSE  libug-worldclock-efl.manifest  org.tizen.worldclock-efl-1.0.0-arm-debug.tpk  org.tizen.worldclock-efl-1.0.0-arm.tpk  org.tizen.worldclock-efl-1.0.0-arm_debug.tpk  org.tizen.worldclock-efl-1.0.0-i386-debug.tpk  org.tizen.worldclock-efl-1.0.0-i386.tpk  org.tizen.worldclock-efl-1.0.0-i386_debug.tpk  project_def.prop  tizen-manifest.xml  tzlist.ini  worldclock-efl.xml
clock-common/: CMakeLists.txt
clock-common/include/: clock_fwk_define.h  clock_fwk_dlog.h  clock_fwk_icu.h  clock_fwk_util.h
clock-common/src/: clock_fwk_icu.c  clock_fwk_util.c
inc/: ug_worldclock_efl.h  worldclock.h  worldclock_add_view.h  worldclock_const.h  worldclock_dlog.h  worldclock_fwk_icu.h  worldclock_util.h
include/: clock_fwk_icu_label.h  taf-button.h  taf.h  ug_worldclock_efl.h  worldclock.h  worldclock_const.h  worldclock_data.h  worldclock_dlog.h  worldclock_fwk_icu.h  worldclock_timezone.h  worldclock_types.h  worldclock_util.h
packaging/: libug-worldclock-efl.spec  org.tizen.worldclock-efl.spec
res/edc/: taf-button-theme.edc  worldclock.edc  worldclock_add.edc
res/edje/: worldclock.edc  worldclock_add.edc
res/misc/: CMakeLists.txt  timezone.sql
res/po/: CMakeLists.txt  ar.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  kn.po  ko_KR.po  lt.po  lv.po  mk.po  ml.po  (+22 more)
shared/res/: worldclock.db  worldclock.db-journal
src/: CMakeLists.txt  clock_fwk_icu_label.cpp  taf-button.c  taf.c  ug_worldclock_efl.c  worldclock_add_view.c  worldclock_data.c  worldclock_fwk_icu.c  worldclock_util.c
