CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ug-worldclock-efl C CXX)
SET(SO_VERSION_MAJOR 0)
SET(SO_VERSION 0.1)

SET(PACKAGE ${PROJECT_NAME})
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(BINDIR "${PREFIX}/bin")
SET(LIBDIR "/usr/lib")
SET(UGLIBDIR "${PREFIX}/lib")
SET(DATADIR "${PREFIX}/res")
SET(EDJDIR "${DATADIR}/edje/${PROJECT_NAME}")
SET(IMAGEDIR "${DATADIR}/images")
SET(LOCALEDIR "${DATADIR}/locale")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")

SET(COMMON_DIR "clock-common")
SET(LIB_NAME_COM "clock-common")

# include file
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${COMMON_DIR}/include)

ADD_SUBDIRECTORY(res/po)
ADD_SUBDIRECTORY(res/misc)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(${COMMON_DIR})

#install tzlist.ini file
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tzlist.ini DESTINATION ${TZ_SYS_DATA}/setting)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tzlist.ini DESTINATION ${TZ_USER_DATA}/clock)

#install xml file
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/worldclock-efl.xml DESTINATION ${TZ_SYS_RO_PACKAGES})

#install images
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/res/images/ DESTINATION ${IMAGEDIR}/${PROJECT_NAME}/ FILES_MATCHING PATTERN "*.png")