CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(worldclock-efl C CXX)

SET(PACKAGE "org.tizen.${PROJECT_NAME}")
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(BINDIR "${PREFIX}/bin")
SET(DATADIR "${PREFIX}/res")
SET(EDJDIR "${DATADIR}/edje/")
SET(IMAGEDIR "${DATADIR}/images")
SET(LOCALEDIR "${DATADIR}/locale")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")

# include file
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/inc)

ADD_SUBDIRECTORY(res/po)
ADD_SUBDIRECTORY(src)



#install xml file
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tizen-manifest.xml DESTINATION ${TZ_SYS_RO_PACKAGES} RENAME ${PACKAGE}.xml)

#install images
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/edje/images/ DESTINATION ${IMAGEDIR}/ FILES_MATCHING PATTERN "*.png")

#install shared
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared/res/ DESTINATION ${PREFIX}/shared/res FILES_MATCHING PATTERN "*.*")
